Adding forms Ass1

--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
         <link rel="stylesheet" href="block-BHaaci/stylesheet/style.css">
     </head>
     <body>
-        <section class="container flex">
-            <article class="col1">
+        <main class="container flex">
+            <div class="col1">
                 <h1>Learn to code by watching others</h1>
                 <p>See how experiencied developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
-            </article>
-            <article class="col1">
+            </div>
+            <div class="col1">
                 <div class="box">
-                    <strong>Try it free 7 days</strong>then $20/mo. thereafter
+                    <strong>Try it free 7 days</strong> then $20/mo. thereafter
                 </div>
-                <div class="border-bottom"></div>
                 <form action="index.html" method="POST">
                     <fieldset>
                         <label>
@@ -33,15 +32,11 @@
                         <label>
                             <input class="demoform" type="password" name="password" placeholder="Password">
                         </label>
-                        <button name="submit">
-                            claim your free trial
-                        </button>
-                        <label class="text">
-                            By clicking the button you are agreeing to our <strong>Terms and Services</strong>
-                        </label>
+                        <input class="button" type="submit" name="submit" value="Claim your free trial">
+                        <p>By clicking the button you are agreeing to our <a href="#">Terms and Services</a></p>
                     </fieldset>
                 </form>
-            </article>
-        </section>
+            </div>
+        </main>
     </body>
 </html>
